Fix hero on mobile

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -316,12 +316,6 @@ main .hero.black-background ul.hero-awards li picture img{
 }
 
 @media (min-width: 990px) { /* desktop */
-  
-  main .hero.black-background .hero-content{
-    padding: 76px var(--body-padding) 56px;
-    display: flex;
-    flex-direction: column;
-  }
 
   main .hero h1 {
     font-size: 50px;
@@ -364,6 +358,7 @@ main .hero.black-background ul.hero-awards li picture img{
     max-width: var(--section-desktop-max-width);
     padding-left: var(--section-desktop-padding);
     padding-right: var(--section-desktop-padding);
+    padding-top: 76px;
     display: flex;
     flex-direction: row;
     min-height: unset;
